force-app/main/default/objects/QuoteLineSubItem__c/QuoteLineSubItem__c.object-meta.xml
<CustomObject>
    <label>Quote Line Sub Item</label>
    <nameField>
        <label>Quote Line Sub Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quote Line Sub Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>