force-app/main/default/objects/QuoteLineSubItem__c/fields/IsEditable__c.field-meta.xml
<CustomField>
    <fullName>IsEditable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Editable</label>
    <type>Checkbox</type>
</CustomField>