force-app/main/default/objects/QuoteLineSubItem__c/fields/Position__c.field-meta.xml
<CustomField>
    <fullName>Position__c</fullName>
    <description>Position from SAP</description>
    <inlineHelpText>Position from SAP</inlineHelpText>
    <label>Position</label>
    <length>100</length>
    <type>Text</type>
</CustomField>