force-app/main/default/objects/QuoteLineSubItem__c/fields/PricebookId__c.field-meta.xml
<CustomField>
    <fullName>PricebookId__c</fullName>
    <formula>QuoteLineItemId__r.Quote.Pricebook2Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pricebook</label>
    <type>Text</type>
</CustomField>