force-app/main/default/objects/QuoteLineSubItem__c/fields/Product2Id__c.field-meta.xml
<CustomField>
    <fullName>Product2Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Quote Line Sub Items</relationshipLabel>
    <relationshipName>Quote_Line_Sub_Items</relationshipName>
    <type>Lookup</type>
</CustomField>