force-app/main/default/objects/QuoteLineSubItem__c/fields/ProductBusinessName__c.field-meta.xml
<CustomField>
    <fullName>ProductBusinessName__c</fullName>
    <label>Product Business Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>