force-app/main/default/objects/QuoteLineSubItem__c/fields/QuantityUnitOfMeasure__c.field-meta.xml
<CustomField>
    <fullName>QuantityUnitOfMeasure__c</fullName>
    <formula>TEXT( Product2Id__r.QuantityUnitOfMeasure )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quantity Unit Of Measure</label>
    <type>Text</type>
</CustomField>