force-app/main/default/objects/QuoteLineSubItem__c/fields/QuoteLineItemId__c.field-meta.xml
<CustomField>
    <fullName>QuoteLineItemId__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Quote Line Item</label>
    <referenceTo>QuoteLineItem</referenceTo>
    <relationshipLabel>Quote Line Sub Items</relationshipLabel>
    <relationshipName>QuoteLineSubItems</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>